[project]
name = "diagnose-workflow"
version = "0.1.0"
description = "Diagnose Workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "langchain_core",
    "langchain_openai",
    "langflow == 1.5.1",
    "langchain_community",
    "faiss-cpu==1.9.0"
]

[dependency-groups]
dev = [
    "workers-py"
]
