[project]
name = "diagnose-workflow"
version = "0.1.0"
description = "Diagnose Workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "langchain_core",
    "langchain_openai",
    "langflow == 1.6.0",
    "langchain_community"
]

[dependency-groups]
dev = [
    "workers-py"
]
